--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.6.0",
     "eslint-plugin-react": "^7.20.5",
